updated readme, fixed code::blocks project file

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 bin/linux/libtcod.so
 bin/windows/SDL.dll
 bin/windows/libtcod-mingw.dll
+src/libtcod-1.5.1
 src/libtcod-1.5.2
 *.tar.gz
 *.o
@@ -16,4 +17,4 @@ src/SDL-1.2.14/
 *.broguerec
 *.broguesave
 obj/
-
+build/windows/brogue.layout
